--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "name": "Thulisoft",
         "email": "thulisoft.info@gmail.com"
     }],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
         "php": "^7.2",
