--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,23 @@
     "name": "thulisoft/multi-auth-for-passport",
     "description": "Add support to multi-auth on Laravel Passport",
     "type": "library",
+    "license": "MIT",
+    "keywords": ["laravel", "passport", "multi-auth"],
+    "authors": [{
+        "name": "Thulisoft",
+        "email": "thulisoft.info@gmail.com"
+    }],
+    "minimum-stability": "stable",
+    "prefer-stable": false,
     "require": {
-        "php": "^7.2",
-        "laravel/passport": "^10.1"
+        "php": "^7.4",
+        "laravel/passport": "^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
         "mockery/mockery": "^1.0",
         "orchestra/database": "^4.0"
     },
-    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Thulisoft\\MultiAuthForPassport\\": "src/"
@@ -25,5 +32,9 @@
             "Thulisoft\\MultiAuthForPassport\\Tests\\": "tests"
         }
     },
-    "minimum-stability": "stable"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "5.0-dev"
+        }
+    }
 }
